--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,15 @@ repos:
       - id: check-yaml
       - id: pretty-format-json
         args: ["--indent", "2", "--autofix", "--no-sort-keys"]
+  - repo: https://github.com/PyCQA/isort
+    rev: 5.12.0
+    hooks:
+      - id: isort
+        args: ["--profile", "black", "--filter-files"]
+  - repo: https://github.com/psf/black
+    rev: 23.3.0
+    hooks:
+      - id: black
   - repo: local
     hooks:
       - id: terraform-fmt
