--- a/code/function/requirements.txt
+++ b/code/function/requirements.txt
@@ -2,4 +2,6 @@
 # The Python Worker is managed by Azure Functions platform
 # Manually managing azure-functions-worker may cause unexpected issues
 
-azure-functions
+azure-functions~=1.14.0
+fastapi~=0.96.0
+aiohttp~=3.8.4
