--- a/.github/workflows/functionApp.yml
+++ b/.github/workflows/functionApp.yml
@@ -31,4 +31,7 @@ jobs:
       function_directory: "./code/function"
       function_name: "myfunc-dev-fctn001"
     secrets:
-      FUNCTION_PUBLISH_PROFILE: ${{ secrets.FUNCTION_PUBLISH_PROFILE }}
+      TENANT_ID: ${{ secrets.TENANT_ID }}
+      CLIENT_ID: ${{ secrets.CLIENT_ID }}
+      CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+      SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
