--- a/.github/workflows/_functionAppDeployTemplate.yml
+++ b/.github/workflows/_functionAppDeployTemplate.yml
@@ -21,6 +21,10 @@ on:
         required: true
         type: string
         description: "Specifies the name of the Azure Function."
+      function_resource_group_name:
+        required: true
+        type: string
+        description: "Specifies the resouce group name of the Azure Function."
     secrets:
       TENANT_ID:
         required: true
@@ -78,7 +82,9 @@ jobs:
         working-directory: ${{ inputs.function_directory }}
         shell: bash
         run: |
-          func azure functionapp publish ${{ inputs.function_name }} \
-            --build remote \
-            --build-native-deps \
-            --python
+          zip -r function.zip *
+          az functionapp deploy \
+            --resource-group ${{ inputs.function_resource_group_name }} \
+            --name ${{ inputs.function_name }} \
+            --src-path ./function.zip \
+            --type zip
