--- a/.github/workflows/functionApp.yml
+++ b/.github/workflows/functionApp.yml
@@ -5,12 +5,14 @@ on:
       - main
     paths:
       - "**.py"
+      - "code/function/**"
 
   pull_request:
     branches:
       - main
     paths:
       - "**.py"
+      - "code/function/**"
 
 jobs:
   function_test:
