--- a/code/function/requirements.txt
+++ b/code/function/requirements.txt
@@ -5,3 +5,5 @@
 azure-functions~=1.14.0
 fastapi~=0.96.1
 aiohttp~=3.8.4
+opentelemetry-instrumentation-fastapi==0.39b0
+azure-monitor-opentelemetry-exporter==1.0.0b14
