--- a/code/function/requirements.txt
+++ b/code/function/requirements.txt
@@ -2,7 +2,7 @@
 # The Python Worker is managed by Azure Functions platform
 # Manually managing azure-functions-worker may cause unexpected issues
 
-azure-identity~=1.13.0
+# azure-identity~=1.13.0
 azure-functions~=1.14.0
 fastapi~=0.96.1
 aiohttp~=3.8.4
