--- a/.github/workflows/_functionAppDeployTemplate.yml
+++ b/.github/workflows/_functionAppDeployTemplate.yml
@@ -49,6 +49,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ inputs.python_version }}
+          cache: "pip"
 
       # Check Out Repository
       - name: Check Out Repository
