--- a/.github/workflows/_functionAppTestTemplate.yml
+++ b/.github/workflows/_functionAppTestTemplate.yml
@@ -26,6 +26,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ inputs.python_version }}
+          cache: "pip"
 
       # Check Out Repository
       - name: Check Out Repository
