--- a/.github/workflows/_containerTemplate.yml
+++ b/.github/workflows/_containerTemplate.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Install cosign
         uses: sigstore/cosign-installer@v3.1.2
         id: install_cosign
-        # if: github.event_name != 'pull_request'
+        if: github.event_name != 'pull_request'
         with:
           cosign-release: 'v2.2.0'
 
@@ -74,7 +74,7 @@ jobs:
       - name: Login Container Registry
         uses: docker/login-action@v3.0.0
         id: registry_login
-        # if: github.event_name != 'pull_request'
+        if: github.event_name != 'pull_request'
         with:
           registry: ${{ inputs.registry_uri }}
           username: ${{ secrets.USER_NAME }}
@@ -101,7 +101,7 @@ jobs:
         with:
           context: ${{ inputs.working_directory }}
           file: ${{ inputs.working_directory }}/Dockerfile
-          push: true # ${{ github.event_name != 'pull_request' }}
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
           cache-from: type=gha
@@ -111,7 +111,7 @@ jobs:
       # This step uses the identity token to provision an ephemeral certificate against the sigstore community Fulcio instance.
       - name: Sign container image
         id: sign
-        # if: ${{ github.event_name != 'pull_request' }}
+        if: ${{ github.event_name != 'pull_request' }}
         run: |
           cosign sign --yes "${TAGS}@${DIGEST}"
         env:
