--- a/.github/workflows/functionApp.yml
+++ b/.github/workflows/functionApp.yml
@@ -22,25 +22,25 @@ jobs:
       python_version: "3.10"
       function_directory: "./code/function"
 
-  function_container:
-    uses: ./.github/workflows/_containerTemplate.yml
-    name: "Function App Container"
-    needs: [function_test]
-    with:
-      environment: "dev"
-      working_directory: "./code/function"
-      registry_uri: "ghcr.io"
-      image_namespace_name: "PerfectThymeTech"
-      image_name: "AzureFunctionPython"
-    secrets:
-      USER_NAME: ${{ github.actor }}
-      PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+  # function_container:
+  #   uses: ./.github/workflows/_containerTemplate.yml
+  #   name: "Function App Container"
+  #   needs: [function_test]
+  #   with:
+  #     environment: "dev"
+  #     working_directory: "./code/function"
+  #     registry_uri: "ghcr.io"
+  #     image_namespace_name: "PerfectThymeTech"
+  #     image_name: "AzureFunctionPython"
+  #   secrets:
+  #     USER_NAME: ${{ github.actor }}
+  #     PASSWORD: ${{ secrets.GITHUB_TOKEN }}
 
   function_deploy:
     uses: ./.github/workflows/_functionAppDeployTemplate.yml
     name: "Function App Deploy"
     needs: [function_test]
-    if: github.event_name == 'push' || github.event_name == 'release'
+    # if: github.event_name == 'push' || github.event_name == 'release'
     with:
       environment: "dev"
       python_version: "3.10"
