--- a/.github/workflows/functionApp.yml
+++ b/.github/workflows/functionApp.yml
@@ -36,18 +36,18 @@ jobs:
       USER_NAME: ${{ github.actor }}
       PASSWORD: ${{ secrets.GITHUB_TOKEN }}
 
-  function_deploy:
-    uses: ./.github/workflows/_functionAppDeployTemplate.yml
-    name: "Function App Deploy"
-    needs: [function_test]
-    if: github.event_name == 'push' || github.event_name == 'release'
-    with:
-      environment: "dev"
-      python_version: "3.10"
-      function_directory: "./code/function"
-      function_name: "myfunc-dev-fctn001"
-    secrets:
-      TENANT_ID: ${{ secrets.TENANT_ID }}
-      CLIENT_ID: ${{ secrets.CLIENT_ID }}
-      CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
-      SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
+  # function_deploy:
+  #   uses: ./.github/workflows/_functionAppDeployTemplate.yml
+  #   name: "Function App Deploy"
+  #   needs: [function_test]
+  #   if: github.event_name == 'push' || github.event_name == 'release'
+  #   with:
+  #     environment: "dev"
+  #     python_version: "3.10"
+  #     function_directory: "./code/function"
+  #     function_name: "myfunc-dev-fctn001"
+  #     tenant_id: "3556be79-2979-4b19-a1af-4dd4e6d9ed7e"
+  #     subscription_id: "8f171ff9-2b5b-4f0f-aed5-7fa360a1d094"
+  #   secrets:
+  #     CLIENT_ID: ${{ secrets.CLIENT_ID }}
+  #     CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
