--- a/code/function/requirements.txt
+++ b/code/function/requirements.txt
@@ -7,7 +7,6 @@ azure-functions~=1.17.0
 fastapi~=0.106.0
 pydantic-settings~=2.1.0
 aiohttp~=3.9.1
-opentelemetry-instrumentation-fastapi==0.43b0
+azure-monitor-opentelemetry~=1.1.1
 opentelemetry-instrumentation-aiohttp-client~=0.43b0
 opentelemetry-instrumentation-system-metrics~=0.43b0
-azure-monitor-opentelemetry-exporter==1.0.0b19
