--- a/code/function/requirements.txt
+++ b/code/function/requirements.txt
@@ -6,7 +6,7 @@
 azure-functions~=1.17.0
 fastapi~=0.106.0
 pydantic-settings~=2.1.0
-aiohttp~=3.9.1
+httpx~=0.26.0
 azure-monitor-opentelemetry~=1.1.1
-opentelemetry-instrumentation-aiohttp-client~=0.43b0
+opentelemetry-instrumentation-httpx~=0.43b0
 opentelemetry-instrumentation-system-metrics~=0.43b0
