--- a/code/function/requirements.txt
+++ b/code/function/requirements.txt
@@ -7,6 +7,7 @@ azure-functions~=1.17.0
 fastapi~=0.106.0
 pydantic-settings~=2.1.0
 httpx~=0.26.0
-azure-monitor-opentelemetry~=1.1.1
+azure-monitor-opentelemetry-exporter==1.0.0b20
+opentelemetry-instrumentation-fastapi==0.43b0
 opentelemetry-instrumentation-httpx~=0.43b0
 opentelemetry-instrumentation-system-metrics~=0.43b0
