--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -22,6 +22,7 @@ jobs:
       environment: "dev"
       config: "PerfectThymeTech"
       terraform_version: "1.6.6"
+      node_version: 18
       working_directory: "./code/infra"
       tenant_id: "3556be79-2979-4b19-a1af-4dd4e6d9ed7e"
       subscription_id: "8f171ff9-2b5b-4f0f-aed5-7fa360a1d094"
