--- a/.github/workflows/_functionAppDeployTemplate.yml
+++ b/.github/workflows/_functionAppDeployTemplate.yml
@@ -40,7 +40,7 @@ on:
 jobs:
   deployment:
     name: Function App Deploy
-    runs-on: self-hosted
+    runs-on: [self-hosted]
     continue-on-error: false
     environment: ${{ inputs.environment }}
 
