--- a/.github/workflows/_terraformEnvironmentTemplate.yml
+++ b/.github/workflows/_terraformEnvironmentTemplate.yml
@@ -50,7 +50,7 @@ permissions:
 jobs:
   lint:
     name: Terraform Lint
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-latest]
     continue-on-error: false
 
     steps:
@@ -96,7 +96,7 @@ jobs:
 
   plan:
     name: Terraform Plan
-    runs-on: self-hosted
+    runs-on: [self-hosted]
     continue-on-error: false
     environment: ${{ inputs.environment }}
     needs: [lint]
@@ -190,7 +190,7 @@ jobs:
 
   apply:
     name: Terraform Apply
-    runs-on: self-hosted
+    runs-on: [self-hosted]
     continue-on-error: false
     environment: ${{ inputs.environment }}
     if: github.event_name == 'push' || github.event_name == 'release'
