--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -6,6 +6,7 @@ on:
     paths:
       - "**.tf"
       - "code/infra/**"
+      - ".github/workflows/deployment.yml"
 
   pull_request:
     branches:
@@ -13,6 +14,7 @@ on:
     paths:
       - "**.tf"
       - "code/infra/**"
+      - ".github/workflows/deployment.yml"
 
 jobs:
   terraform_dev:
