--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -6,6 +6,7 @@ on:
     paths:
       - "**.tf"
       - "code/infra/**"
+      - "config/**"
       - ".github/workflows/terraform.yml"
 
   pull_request:
@@ -14,6 +15,7 @@ on:
     paths:
       - "**.tf"
       - "code/infra/**"
+      - "config/**"
       - ".github/workflows/terraform.yml"
 
 jobs:
