--- a/.github/workflows/_terraformEnvironmentTemplate.yml
+++ b/.github/workflows/_terraformEnvironmentTemplate.yml
@@ -101,7 +101,7 @@ jobs:
     environment: ${{ inputs.environment }}
     needs: [lint]
     concurrency:
-      group: terraform-${{ inputs.config }}-${{ inputs.environment }}
+      group: terraform-${{ inputs.config }}-${{ inputs.environment }}-${{ github.event_name == 'schedule' || github.event_name == 'release' }}
       cancel-in-progress: false
 
     env:
@@ -199,7 +199,7 @@ jobs:
     if: github.event_name == 'push' || github.event_name == 'release'
     needs: [plan]
     concurrency:
-      group: terraform-${{ inputs.config }}-${{ inputs.environment }}
+      group: terraform-${{ inputs.config }}-${{ inputs.environment }}-${{ github.event_name == 'schedule' || github.event_name == 'release' }}
       cancel-in-progress: false
 
     env:
